--- a/service-notification-management/package.json
+++ b/service-notification-management/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.3.4",
     "nodemailer": "^6.9.13",
